--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <label for="birthdate">Birthdate:</label>
                 <input type="date" id="birthdate" name="birthdate">
                 <br>
-                <label for="gender">Gender:</label>
+                <label>Gender:</label>
                 <input type="radio" id="male" name="gender" value="male">
                 <label for="male">Male</label>
                 <input type="radio" id="female" name="gender" value="female">
