--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </section>
     </main>
     <footer>
-        <p>Meeting minutes prepared by John Doe</p>
+        <p>Meeting minutes prepared by Zejun Zhou</p>
     </footer>
     <section>
         <h2>Feedback Form</h2>
