--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
         <section>
             <h2>Audio Recording</h2>
             <audio controls>
-                <source src="meeting-audio.mp3" type="audio/mpeg">
-                Your browser does not support the audio element.
+                <source src="horse.ogg" type="audio/ogg">
+                <source src="horse.mp3" type="audio/mpeg">
             </audio>
         </section>
         <section>
             <h2>Video Recording</h2>
             <video controls>
-                <source src="meeting-video.mp4" type="video/mp4">
-                Your browser does not support the video element.
+                <source src="movie.mp4" type="video/mp4">
+                <source src="movie.ogg" type="video/ogg">
             </video>
         </section>
     </main>
@@ -75,11 +75,11 @@
                 <input type="radio" id="female" name="gender" value="female">
                 <label for="female">Female</label>
                 <br>
-                <label for="topics">Interested Topics:</label>
+                <label for="topics">Favorite Sports:</label>
                 <select id="topics" name="topics">
-                    <option value="design">Design</option>
-                    <option value="development">Development</option>
-                    <option value="marketing">Marketing</option>
+                    <option value="basketball">Basketball</option>
+                    <option value="soccer">Soccer</option>
+                    <option value="football">Football</option>
                 </select>
                 <br>
                 <label for="newsletter">Subscribe to our newsletter:</label>
