--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
     <footer>
         <p>Meeting minutes prepared by Zejun Zhou</p>
     </footer>
-    <section>
+    <section id="feedback-section">
         <h2>Feedback Form</h2>
+        <div class="form-wrapper">
         <form>
             <fieldset>
                 <legend>Your Information</legend>
@@ -91,6 +92,7 @@
                 <button type="submit">Submit</button>
             </fieldset>
         </form>
+      </div>
     </section>
 </body>
 </html>
